Refactor UploadToS3Record
