# src/useCases/UploadToS3UseCase.ts
@@ -1,29 +1,30 @@
 import crypto from 'crypto';
 import { pipe } from 'fp-ts/lib/function';
 import * as TE from 'fp-ts/TaskEither';
-import { AmzChecksumSHA256 } from '../generated/definitions/AmzChecksumSHA256';
-import { AmzMetaSecret } from '../generated/definitions/AmzMetaSecret';
-import { AmzSdkChecksumAlg } from '../generated/definitions/AmzSdkChecksumAlg';
-import { AmzVersionId } from '../generated/definitions/AmzVersionId';
-import { AmzDocumentKey } from '../generated/definitions/AmzDocumentKey';
+import { makeUploadToS3Record, UploadToS3Record } from '../domain/UploadToS3Record';
 import { SystemEnv } from './SystemEnv';
 
 const computeSha256 = (bytes: Buffer) => crypto.createHash('sha256').update(bytes).digest('base64');
 
 export const UploadToS3UseCase =
-  ({ uploadToS3RecordRepository, dateGenerator }: SystemEnv) =>
+  (env: SystemEnv) =>
   (url: string) =>
-  (key: AmzDocumentKey) =>
-  (checksumAlg?: AmzSdkChecksumAlg) =>
-  (secret: AmzMetaSecret) =>
-  (checksum: AmzChecksumSHA256) =>
-  (documentAsBytes: Buffer): TE.TaskEither<Error, AmzVersionId> => {
-    const input = { key, url, checksumAlg, secret, checksum, computedSha256: computeSha256(documentAsBytes) };
-    const output = { statusCode: 200 as const, returned: Math.random() };
-    return pipe(
-      uploadToS3RecordRepository.insert({ type: 'UploadToS3Record', input, output, loggedAt: dateGenerator() }),
-      TE.map((_) => output.returned)
+  (key: UploadToS3Record['input']['key']) =>
+  (checksumAlg?: UploadToS3Record['input']['checksumAlg']) =>
+  (secret: UploadToS3Record['input']['secret']) =>
+  (checksum: UploadToS3Record['input']['checksum']) =>
+  (documentAsBytes: Buffer): TE.TaskEither<Error, UploadToS3Record['output']> =>
+    pipe(
+      makeUploadToS3Record(env)({
+        key,
+        url,
+        checksumAlg,
+        secret,
+        checksum,
+        computedSha256: computeSha256(documentAsBytes),
+      }),
+      env.recordRepository.insert,
+      TE.map(({ output }) => output)
     );
-  };
 
 export type UploadToS3UseCase = ReturnType<typeof UploadToS3UseCase>;
